# leadership-touch-base

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  wrangler.jsonc
app/: next.config.ts  package.json  pnpm-lock.yaml
app/public/: characters.json  clips-index.json  tiles.json
app/scripts/: build-static.mjs
data/characters/: characters.json  review.md
data/chats/: 0JQkAxmLzhM.json  1sACHNa3_P0.json  9nWj2i1wzeQ.json  ATcugwW9RJs.json  B7i2ObNrZzk.json  I4UEzvIaLxg.json  IPmyYpcLvZE.json  IygvbdeNWqY.json  KY5X8uZgEdY.json  NyHhdf6aVJM.json  Ob_jiY_9S2Y.json  T7xdZ5Lji6s.json  TirJZUa620U.json  Tz0x8DcXQhE.json  V2DHYyZD03w.json  ZC4sxomSCDI.json  cnhFdroa3Fc.json  fdvsrY1-F4I.json  mhEjCqGcyqs.json  ts6m_SCQ8_w.json  wUGEyA4CirU.json  wtaTQyf055I.json
data/personas/: braxton.json  braxton.md  bro_coworker.json  bro_coworker.md  bro_coworker_charles.json  bro_coworker_charles.md  bro_coworker_xander.json  bro_coworker_xander.md  chaos_agent.json  chaos_agent.md  cold_boss.json  cold_boss.md  cold_boss_ryan.json  cold_boss_ryan.md  corporate_boss.json  corporate_boss.md  corporate_parent.json  corporate_parent.md  corporate_recruiter.json  corporate_recruiter.md  corporate_robot.json  corporate_robot.md  departing_employee.json  departing_employee.md  earnest_intern.json  earnest_intern.md  (+8 more)
pipeline/: pyproject.toml
pipeline/src/larp_pipeline/: __init__.py  characters.py  chats.py  cli.py  clips.py  grunts.py  keyframes.py  llm.py  paths.py  personas.py  seed_tiles.py  tiles.py  transcribe.py
scripts/: bootstrap.sh  ingest.sh  stage-public.py
(+140 files in other folders)
